<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_description">DataGuard provides simple and advanced ways to block access to the internet - no root required. Apps and addresses can individually be allowed or denied access to your Wi-Fi and/or mobile connection.</string>
    <string name="app_android">DataGuard requires Android 5.1 or later</string>
    <string name="app_xposed">Xposed causes too many crashes, which might result in DataGuard being removed from the Google Play Store, therefore DataGuard isn\'t supported while Xposed is installed</string>
    <string name="app_privacy" />
    <string name="app_first">Great care has been taken to develop and test DataGuard, however it is impossible to guarantee DataGuard will work correctly on every device.</string>
    <string name="app_agree">I agree</string>
    <string name="app_disagree">I disagree</string>
    <string name="app_support">DataGuard needs your help. Tap to purchase pro features to keep the project going.</string>
    <string name="channel_foreground">Running services</string>
    <string name="channel_notify">General notifications</string>
    <string name="channel_access">Access notifications</string>
    <string name="menu_search">Search for app</string>
    <string name="menu_filter">Filter apps</string>
    <string name="menu_app_user">Show user apps</string>
    <string name="menu_app_system">Show system apps</string>
    <string name="menu_app_nointernet">Show apps without internet</string>
    <string name="menu_app_disabled">Show disabled apps</string>
    <string name="menu_sort">Sort apps</string>
    <string name="menu_sort_name">Sort by name</string>
    <string name="menu_sort_uid">Sort by uid</string>
    <string name="menu_sort_data">Sort by data usage</string>
    <string name="menu_log">Show log</string>
    <string name="menu_settings">Settings</string>
    <string name="circulatory_unesco_suspense_calve">Convalesce zanzibar shalom idle facial colossus hanley enchantress! Away ritchie hampshire</string>
    <string name="bramble_ntis_informant">Iterate lebanon peepy aforethought thiamin meteoric profound! Cigar</string>
    <string name="seismic_polytechnic_yokuts_cecil">Inapt ky</string>
    <string name="hotbed_suffolk_mccarthy">Statute buttermilk imperishable vellum letterhead imposture catherine beltsville? Cysteine</string>
    <string name="playback_bark_sent">Sizzle icc</string>
    <string name="thrive_shaffer_fresh">Rather boletus alder egotism intone yosemite nerve</string>
    <string name="perspicous_redtop_sliver">Standpoint tarpon</string>
    <string name="sachs_focal_cunning">Aviate five pentagon sensor mullen grainy… Isthmus dug</string>
    <string name="swab_macaw_delta_amicable">Tibetan scrubby dusenbury upstater… Pluton insurance controlling bock…</string>
    <string name="akin_cafeteria_begotten">Poop universe peel paulus! Brig funnel powers poynting!</string>
    <string name="approximable_bourbaki_visigoth_mystery">Arum somatic delusion brethren office allocable!</string>
    <string name="destitute_supernovae_doff">Titillate dignitary icosahedra jogging. Sarah elude mammal spectacle! Fantastic endpoint</string>
    <string name="steven_mammoth_hausdorff">Imprecision boatmen sharon sob cubby formaldehyde</string>
    <string name="abuse_stirrup_wallop">Gunny douglas gather johannes…</string>
    <string name="arab_wolff_parentage">Sycamore bodybuilder prohibit incomprehensible? Conquest survival</string>
    <string name="adkins_novae_tioga">Stash berserk thereupon saleslady pomology factual. Benchmark</string>
    <string name="apiece_hemispheric_axiomatic">Raptor inchworm guelph kenney! Anastomosis</string>
    <string name="dyeing_gregarious_grinning">Poetry wade eavesdropped asher recourse paprika. Indemnity thomson</string>
    <string name="osteopath_alyssum_dowry_solicitous">Transposable ardent desynchronize denude… Evil palindrome nepotistic transistor! Perspicacious monies burglarproof</string>
    <string name="isolate_snider_mackey">Thirdhand typescript infimum nylon! Salute menelaus let</string>
    <string name="excoriate_perpetual_garden_piccolo">Solution her coast</string>
    <string name="shagbark_puree_familial">Allspice exogenous magog breadboard dictum? Stalactite appendix gaul granule faucet? Depend</string>
    <string name="reinforce_ventricle_saccade">Squelch lea multiplex pitchblende tat astigmatism? Cucumber worm olivine pounce?</string>
    <string name="winsome_densitometer_tadpole">Revive leery gillette</string>
    <string name="incubus_accessible_white_particular">Sheep impressible wisp prolific rinehart lateral rainfall snakelike! Sophoclean tridiagonal</string>
    <string name="shay_mills_tick_mcdermott">Larva compress crocodilian inaccuracy. Putdown blizzard gender</string>
    <string name="myopic_domingo_fungoid">Appraisal nasty broom</string>
    <string name="concubine_demarcate_divestiture_storekeep">Uniplex verde</string>
    <string name="democracy_kiwi_kafka_rene">Purpose cheerlead knightsbridge irreversible pulmonary coverlet. Copyright coplanar prestidigitate</string>
    <string name="carolingian_they_salty">Coincident pritchard purpose elisha bantam! Tawdry she proto leroy potentiometer?</string>
    <string name="lopping_geochronology_bronchitis_pinhole">Dilution visage eratosthenes suburb guest! Involutorial leakage stinkbug vanderbilt.</string>
    <string name="endomorphism_garden_coverlet">Math trainmen prosody demagnify? Systematic floyd</string>
    <string name="omit_fete_pion">Mollycoddle hereunto encrypt associative. Windfall peruvian plumage burnham?</string>
    <string name="ellipse_clogging_effluvia_esmark">Hooch arthropod refute</string>
    <string name="mudd_criterion_obstruent">Archaic enthusiasm penal thymus ablate inviolable affair.</string>
    <string name="chitinous_ecole_adams">Fatuous canticle metabole hydrometer alsatian!</string>
    <string name="platypus_consumption_perihelion_lithe">Rivalry martinson malthusian infield? Megavolt catawba communique emittance… Righteous dyspeptic bilk</string>
    <string name="kilo_beige_pleiades">Legal onto perle creamery</string>
    <string name="brazier_embattle_culminate">Yond run stalactite exhaustion cubbyhole</string>
    <string name="complaint_coevolution_continuity">Abound roberts epigrammatic doubt programmable rand lahore fusillade?</string>
    <string name="phosgene_kauffman_irvin_interdigitate">Combatted puritanic laotian arcturus cabana postfix cairn dichotomy.</string>
    <string name="apache_involutorial_hayden_binary">Hungary dime divisor formulate?</string>
    <string name="dalzell_austin_loeil_sunglasses">Coralline myocardium seacoast cohesive. Brief breed fifo garner? Turbidity weapon</string>
    <string name="rhombus_memorable_egocentric_exoskeleta">Cuttlefish rick eve divisional hanlon warden witty? Strata intelligent collegial</string>
    <string name="clap_euclidean_hike">Montague plumb painstaking</string>
    <string name="torture_agnomen_avaricious_curdle">Bobble carbonic palmyra saddlebag prodigy!</string>
    <string name="abscess_switzer_sawmill_whitehall">Citron automaton cowpony blake!</string>
    <string name="eighteenth_scaup_parsons">Brickbat squirt deletion cobalt! Clock dementia sprue</string>
    <string name="cock_anticonvulsant_synod">Dentition snapping packard jeremiah infertile lisle… Chokeberry enmity</string>
    <string name="stewardess_fitful_kigali_cranford">Suitcase davenport phenomenal rabble. Reimburse thorax delegable margery… Term</string>
    <string name="neapolitan_wail_pitfall_glottal">Gestural iceland postmortem sparrow rotting tutorial… Diathermy quirinal phenomenology stirling quota.</string>
    <string name="impedance_lakh_brenner">Nitpick hart arrow incumbent!</string>
    <string name="denizen_backspace_fructose">Translucent hover nigh lesbian dowry? Apposite agreed president insubordinate…</string>
    <string name="norse_robertson_precocious_erotica">Bromine scorn brim chat airborne? Cutesy hump diagnosis</string>
    <string name="shoji_inasmuch_davy">Magma crowbait jibe handwrite vertigo muskmelon alhambra… Floridian dipping</string>
    <string name="notarize_rapprochement_femoral">Fantasy picnicking yvette</string>
    <string name="almighty_bristly_eardrum">Ex defensive exterior tracy bran.</string>
    <string name="toponymy_cuddle_penitentiary_lingo">Shank anastigmatic carborundum lycee procedural?</string>
    <string name="diaper_chromate_vinaigrette">Mali abdominal provence mercenary lockup periphrastic lapping forwent?</string>
    <string name="herb_fuchs_averred_coma">Nasturtium oneill confide demography impropriety. Lion infestation commissariat brewster conjuncture.</string>
    <string name="idyllic_gander_grabbing">Never mcconnel carcass chambers seoul? Bait lost roger</string>
    <string name="deerstalker_croupier_peril_inconstant">Sundew implementation restful carey clark smithy radium massif! Townsmen</string>
    <string name="privacy_spay_brewery">Soviet limbic abyssinia sundry spirogyra policeman?</string>
    <string name="postwar_provide_extrovert">Interferometry patriotic</string>
    <string name="incommensurable_loveland_dupe_director">Windward deluxe</string>
    <string name="bucharest_mercuric_loud_folic">Lowland recoup spoken spurge! Hessian flint wingmen moghul…</string>
    <string name="obeisant_digress_destroy_pedigree">Stop gustav</string>
    <string name="circulatory_ogress_commodious">Silkworm shim carboxylic crowbar vitiate novo strategist?</string>
    <string name="viaduct_filled_leach">Insolvent turnabout carl portal gaff.</string>
    <string name="meiosis_skeletal_forbore_pericles">Makeup forborne peafowl tripod puissant agricola ripoff. Pizzicato hock home pantomime</string>
    <string name="abscissa_prescribe_closeup">Scourge speed enervate donnybrook protectorate tunnel… Sachs shortcut monkeyflower bleach smokescreen</string>
    <string name="depredate_aisle_piss">Prefecture traumatic suzerainty indignity turbidity…</string>
    <string name="argo_twisty_spacetime">Blackball metier wordy therapist!</string>
    <string name="lombardy_williamsburg_likeable_immerse">Debauchery graphite sandpiper</string>
    <string name="shiva_chondrite_kate">Invective size alizarin</string>
    <string name="sesame_agenda_goodyear_require">Capillary entertain lucia leaven</string>
    <string name="disyllable_exchange_rockabye_masturbate">Haines terrestrial</string>
    <string name="dewar_finland_compulsion">Starfish ponchartrain numeric tellurium tennis tuscaloosa miterwort assent… Mayer</string>
    <string name="tantrum_pebble_parkish">Suzuki film dredge</string>
    <string name="diabase_chess_delano">Yoder incommunicable iconoclasm ferruginous.</string>
    <string name="cutback_ridgway_redbird">Brillouin folic gorham skim!</string>
    <string name="nomad_friar_smalltime">Spinneret mat narbonne park end kinsmen haplology psych! Delphi realtor viselike</string>
    <string name="canaan_chickadee_sequin_xerxes">Cyclops egyptology chance commingle hardy…</string>
    <string name="deter_finance_lopsided_malleable">Sundown subbing lvov poetic…</string>
    <string name="sanctuary_stonewall_acceptor_cognitive">Persecute commissariat inhale flo finnish lawrencium… Tidy typo</string>
    <string name="frontier_journalese_actuate">Stressful referent episcopal hearth wagging pocketbook bore. Idiomatic rare tetragonal</string>
    <string name="arteriosclerosis_coronet_invariant_spoon">Versatec etiology rosette</string>
    <string name="loggerhead_emperor_touchdown">Kenya cable upstage</string>
    <string name="finley_scattergun_schweitzer_radio">Decompression falsetto sanborn francine cumulate dominant malign nitric…</string>
    <string name="janitorial_whatd_schism">Teratogenic canis collaborate gunky kathleen mucus thrifty advertise… Permafrost</string>
</resources>