<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <Button android:background="@color/taut_offal" android:hint="@string/shiva_chondrite_kate" android:id="@+id/gildView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/abscess_switzer_sawmill_whitehall" android:textColor="#03F732CD" app:layout_constraintBottom_toTopOf="@id/beetLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout android:gravity="center_vertical" android:id="@+id/beetLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" app:layout_constraintBottom_toTopOf="@id/tolerantView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/gildView">
        <EditText android:background="@color/rainstorm_filth_loincloth" android:hint="@string/bramble_ntis_informant" android:id="@+id/beingClownView" android:inputType="textCapWords" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/adkins_novae_tioga" android:textColor="@color/fife_catch"/>
        <AutoCompleteTextView android:background="@color/goatherd_tetrachloride" android:hint="@string/janitorial_whatd_schism" android:id="@+id/saltonPittView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingEnd="@dimen/scythe_blend_width" android:paddingStart="@dimen/obstetrician_blatz" android:paddingTop="28dp" android:text="@string/cock_anticonvulsant_synod" android:textColor="@color/hitch_rumen"/>
        <EditText android:background="@color/shameful_parish_traumatic" android:hint="@string/isolate_snider_mackey" android:id="@+id/tootView" android:inputType="textVisiblePassword" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingEnd="@dimen/headway_prolix" android:paddingStart="@dimen/glans_contradistinction" android:paddingTop="@dimen/train_astray_padding" android:text="@string/winsome_densitometer_tadpole" android:textColor="@color/sicklewort_confabulate"/>
        <EditText android:background="@color/spread_pickman_ferber" android:hint="@string/endomorphism_garden_coverlet" android:id="@+id/nibbleGlutamateView" android:inputType="text" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/lombardy_williamsburg_likeable_immerse" android:textColor="@color/taut_offal"/>
        <Button android:background="@color/abolition_tonal_bridget" android:hint="@string/hotbed_suffolk_mccarthy" android:id="@+id/politeView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/finley_scattergun_schweitzer_radio"/>
        <EditText android:background="@color/forswear_loeil" android:hint="@string/viaduct_filled_leach" android:id="@+id/warheadView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingEnd="@dimen/hydrocyanic_jacobs_size" android:paddingStart="@dimen/guarantee_monotreme" android:text="@string/deter_finance_lopsided_malleable" android:textColor="@color/carry_funnel"/>
        <CheckBox android:background="@color/wire_permalloy_casbah" android:hint="@string/depredate_aisle_piss" android:id="@+id/insolubleView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/notarize_rapprochement_femoral" android:textColor="@color/estop_streak_calgary"/>
        <LinearLayout android:gravity="center_horizontal" android:id="@+id/chisholmLayout" android:layout_height="match_parent" android:layout_width="wrap_content" android:orientation="vertical">
            <CheckedTextView android:hint="@string/nomad_friar_smalltime" android:id="@+id/raffishView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/shay_mills_tick_mcdermott" android:textColor="#2686F618"/>
            <AutoCompleteTextView android:background="@color/polymerase_photon" android:hint="@string/dalzell_austin_loeil_sunglasses" android:id="@+id/borderlineBarbellView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/abuse_stirrup_wallop" android:textColor="@color/vito_invoice"/>
            <EditText android:hint="@string/circulatory_unesco_suspense_calve" android:id="@+id/shagView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/myopic_domingo_fungoid"/>
        </LinearLayout>
        <CheckBox android:hint="@string/ellipse_clogging_effluvia_esmark" android:id="@+id/purrWhimsyView" android:layout_height="wrap_content" android:layout_margin="@dimen/cecropia_monogamy_padding" android:layout_width="wrap_content" android:text="@string/disyllable_exchange_rockabye_masturbate" android:textColor="#23BE48C1" android:textSize="@dimen/luzon_bash_textsize"/>
        <Button android:background="@color/ontology_pronounceable_monster" android:hint="@string/platypus_consumption_perihelion_lithe" android:id="@+id/kirchnerCiceronianView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/dewar_finland_compulsion" android:textColor="@color/guaranteeing_chromatography"/>
        <Button android:background="#8E8B52" android:hint="@string/mudd_criterion_obstruent" android:id="@+id/beerInvoluteView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingTop="@dimen/bravery_rwanda_margin" android:text="@string/kilo_beige_pleiades" android:textColor="#74EBF867"/>
        <AutoCompleteTextView android:background="@color/hamstrung_muskrat" android:hint="@string/almighty_bristly_eardrum" android:id="@+id/bernardoView" android:layout_height="wrap_content" android:layout_margin="@dimen/month_even_height" android:layout_width="wrap_content" android:text="@string/norse_robertson_precocious_erotica" android:textColor="@color/crap_synchronous"/>
        <AutoCompleteTextView android:background="@color/vaduz_rosemary_concocter" android:hint="@string/toponymy_cuddle_penitentiary_lingo" android:id="@+id/deepenCreonView" android:layout_height="match_parent" android:layout_margin="34dp" android:layout_width="wrap_content" android:text="@string/incubus_accessible_white_particular" android:textColor="#48297B" android:textSize="@dimen/dorado_pokerface_textsize"/>
        <CheckedTextView android:background="@color/urinal_vehicle_goodwill" android:hint="@string/complaint_coevolution_continuity" android:id="@+id/inviteView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingEnd="34dp" android:paddingStart="@dimen/catfish_emma_padding" android:text="@string/stewardess_fitful_kigali_cranford" android:textColor="@color/geyser_beryl"/>
    </LinearLayout>
    <CheckBox android:hint="@string/apiece_hemispheric_axiomatic" android:id="@+id/tolerantView" android:layout_height="wrap_content" android:layout_width="@dimen/leninist_denudation" android:text="@string/deerstalker_croupier_peril_inconstant" android:textColor="@color/admonish_less_cavernous" app:layout_constraintBottom_toTopOf="@id/eyedPlopLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/beetLayout"/>
    <LinearLayout android:gravity="bottom|center_vertical" android:id="@+id/eyedPlopLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" app:layout_constraintBottom_toTopOf="@id/advisorAdvocacyView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tolerantView">
        <Button android:background="@color/haplology_pixy" android:hint="@string/approximable_bourbaki_visigoth_mystery" android:id="@+id/aleckView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/hectic_camino_padding" android:text="@string/tantrum_pebble_parkish" android:textColor="#9FA11C5A"/>
        <TextView android:hint="@string/rhombus_memorable_egocentric_exoskeleta" android:id="@+id/sheikStratosphereView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/surjective_partial_width" android:paddingEnd="@dimen/adage_throughout_size" android:paddingStart="@dimen/tarpon_ornate_margin" android:text="@string/postwar_provide_extrovert" android:textColor="@color/goggle_celandine_manicure" android:textSize="@dimen/grossman_bronzy_textsize"/>
        <EditText android:background="@color/invert_emmett" android:hint="@string/steven_mammoth_hausdorff" android:id="@+id/massiveView" android:inputType="text" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/torture_agnomen_avaricious_curdle" android:textColor="#0BBBFEFB"/>
    </LinearLayout>
    <CheckedTextView android:background="#0F6B83" android:hint="@string/abscissa_prescribe_closeup" android:id="@+id/advisorAdvocacyView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/concubine_demarcate_divestiture_storekeep" app:layout_constraintBottom_toTopOf="@id/writThesisView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/eyedPlopLayout"/>
    <CheckedTextView android:background="@color/fractal_quixotic_cornea" android:hint="@string/apache_involutorial_hayden_binary" android:id="@+id/writThesisView" android:layout_height="wrap_content" android:layout_width="@dimen/neglecter_thicket" android:padding="22dp" android:paddingBottom="@dimen/collins_casanova_height" android:paddingTop="26dp" android:text="@string/seismic_polytechnic_yokuts_cecil" android:textColor="@color/stepchild_betoken_babel" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/advisorAdvocacyView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
