<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <Button android:background="@color/involutory_virtuoso" android:hint="@string/akin_cafeteria_begotten" android:id="@+id/everyPunsterView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/brazier_embattle_culminate" android:textColor="@color/deus_deferrable_metallurgy" android:textSize="26sp" app:layout_constraintBottom_toTopOf="@id/extirpateDistributiveView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <CheckedTextView android:background="#36957A51" android:hint="@string/destitute_supernovae_doff" android:id="@+id/extirpateDistributiveView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/arab_wolff_parentage" android:textColor="@color/lethal_djakarta" app:layout_constraintBottom_toTopOf="@id/eitherView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/everyPunsterView"/>
    <CheckBox android:hint="@string/canaan_chickadee_sequin_xerxes" android:id="@+id/eitherView" android:layout_height="wrap_content" android:layout_margin="@dimen/gobble_retrieval_margin" android:layout_width="match_parent" android:text="@string/eighteenth_scaup_parsons" app:layout_constraintBottom_toTopOf="@id/hugeCounterpoiseLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/extirpateDistributiveView"/>
    <LinearLayout android:gravity="center" android:id="@+id/hugeCounterpoiseLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" app:layout_constraintBottom_toTopOf="@id/recappableScrubbingView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/eitherView">
        <CheckBox android:background="@color/apostate_ejaculate_whoop" android:hint="@string/arteriosclerosis_coronet_invariant_spoon" android:id="@+id/precessView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/chitinous_ecole_adams" android:textColor="#3A72F728"/>
        <EditText android:background="@color/inclusion_ponchartrain_panicking" android:hint="@string/thrive_shaffer_fresh" android:id="@+id/piggingLoreView" android:inputType="textPersonName" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/lopping_geochronology_bronchitis_pinhole" android:textColor="#FC02EE"/>
        <CheckBox android:background="#0B398E" android:hint="@string/shoji_inasmuch_davy" android:id="@+id/murderousPitchstoneView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/shagbark_puree_familial" android:textColor="@color/lengthwise_redpoll_aback" android:textSize="@dimen/exotica_hide_textsize"/>
        <CheckBox android:hint="@string/loggerhead_emperor_touchdown" android:id="@+id/pamelaMaoriView" android:layout_height="match_parent" android:layout_marginBottom="@dimen/multi_assiduity_size" android:layout_marginEnd="32dp" android:layout_marginStart="@dimen/magnuson_turnkey_width" android:layout_width="wrap_content" android:text="@string/bucharest_mercuric_loud_folic" android:textColor="@color/lengthwise_redpoll_aback"/>
        <AutoCompleteTextView android:background="@color/paulsen_fold" android:hint="@string/torture_agnomen_avaricious_curdle" android:id="@+id/involuntaryGripeView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/circulatory_ogress_commodious" android:textColor="@color/perihelion_rogue" android:textSize="@dimen/berwick_dawn_textsize"/>
        <CheckBox android:background="#92E031" android:hint="@string/carolingian_they_salty" android:id="@+id/lappingBloomView" android:layout_height="match_parent" android:layout_width="wrap_content" android:padding="@dimen/modulus_wong_width" android:text="@string/cutback_ridgway_redbird" android:textColor="@color/absurdum_oslo_squirehood"/>
        <AutoCompleteTextView android:background="@color/insubstantial_changeover_cushman" android:hint="@string/depredate_aisle_piss" android:id="@+id/maleView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/diabase_chess_delano" android:textColor="@color/heartthrob_lupine" android:textSize="@dimen/extrapolate_rapacity_textsize"/>
        <AutoCompleteTextView android:background="@color/climax_maltreat" android:hint="@string/dyeing_gregarious_grinning" android:id="@+id/bauhausView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/omit_fete_pion" android:textColor="#4D4FADA4" android:textSize="24sp"/>
        <TextView android:background="@color/crap_synchronous" android:hint="@string/democracy_kiwi_kafka_rene" android:id="@+id/bermanView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/incommensurable_loveland_dupe_director" android:textColor="@color/registration_basket"/>
        <CheckedTextView android:background="@color/sanatoria_sterling" android:hint="@string/sanctuary_stonewall_acceptor_cognitive" android:id="@+id/blenheimView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/sachs_focal_cunning" android:textColor="@color/admonish_less_cavernous" android:textSize="@dimen/hyphen_piggyback_textsize"/>
        <CheckedTextView android:hint="@string/argo_twisty_spacetime" android:id="@+id/crotchAdvocacyView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/nomad_friar_smalltime"/>
        <LinearLayout android:gravity="end" android:id="@+id/layetteLayout" android:layout_height="match_parent" android:layout_marginEnd="@dimen/paprika_pollard_size" android:layout_marginStart="@dimen/intoxicate_faucet_padding" android:layout_marginTop="@dimen/brownian_abridgment" android:layout_width="wrap_content" android:orientation="vertical">
            <CheckedTextView android:background="#B72B1474" android:hint="@string/meiosis_skeletal_forbore_pericles" android:id="@+id/bladdernutArequipaView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/pleat_belmont_size" android:text="@string/sesame_agenda_goodyear_require" android:textColor="@color/revolution_fireplace"/>
        </LinearLayout>
        <CheckBox android:background="@color/effeminate_sonata" android:hint="@string/perspicous_redtop_sliver" android:id="@+id/coquetteCellView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/obeisant_digress_destroy_pedigree" android:textColor="#3D8D154F"/>
        <EditText android:background="@color/midterm_kresge" android:hint="@string/swab_macaw_delta_amicable" android:id="@+id/wheneverView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/impedance_lakh_brenner" android:textColor="@color/western_measle_skimpy"/>
        <TextView android:hint="@string/phosgene_kauffman_irvin_interdigitate" android:id="@+id/placentaPronounView" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/commentary_chaperone_size" android:layout_marginStart="@dimen/ramada_deferrable_margin" android:layout_marginTop="@dimen/thermofax_studding_padding" android:layout_width="wrap_content" android:text="@string/denizen_backspace_fructose" android:textColor="@color/catnip_tektite_pauli" android:textSize="@dimen/hater_opine_textsize"/>
        <Button android:background="@color/ezekiel_rope" android:hint="@string/excoriate_perpetual_garden_piccolo" android:id="@+id/journeymenView" android:layout_height="wrap_content" android:layout_margin="@dimen/neglecter_thicket" android:layout_width="wrap_content" android:text="@string/idyllic_gander_grabbing" android:textColor="@color/harley_defrost_skindive"/>
    </LinearLayout>
    <Button android:background="@color/immaterial_muse_zirconium" android:hint="@string/privacy_spay_brewery" android:id="@+id/recappableScrubbingView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/frontier_journalese_actuate" android:textColor="#3BA9C05F" app:layout_constraintBottom_toTopOf="@id/trihedralLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/hugeCounterpoiseLayout"/>
    <LinearLayout android:gravity="center_horizontal|start" android:id="@+id/trihedralLayout" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/gameteView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/recappableScrubbingView">
        <TextView android:hint="@string/osteopath_alyssum_dowry_solicitous" android:id="@+id/acornView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/playback_bark_sent" android:textSize="@dimen/haines_turkish_textsize"/>
    </LinearLayout>
    <CheckBox android:background="@color/bergman_regale_homespun" android:hint="@string/diaper_chromate_vinaigrette" android:id="@+id/gameteView" android:layout_height="wrap_content" android:layout_marginBottom="20dp" android:layout_marginEnd="@dimen/keelson_orange_width" android:layout_marginStart="@dimen/mice_clothesline_margin" android:layout_width="match_parent" android:paddingEnd="@dimen/circumcision_algal_padding" android:paddingStart="@dimen/exogamous_fatuous_width" android:paddingTop="20dp" android:text="@string/bramble_ntis_informant" android:textColor="#A0292F" app:layout_constraintBottom_toTopOf="@id/settingView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/trihedralLayout"/>
    <Button android:background="@color/redmond_ethiopia" android:hint="@string/herb_fuchs_averred_coma" android:id="@+id/settingView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/clap_euclidean_hike" android:textColor="@color/berglund_prune_dyer" app:layout_constraintBottom_toTopOf="@id/pantheonCeltView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/gameteView"/>
    <CheckBox android:background="@color/wiretap_baste_coronet" android:hint="@string/neapolitan_wail_pitfall_glottal" android:id="@+id/pantheonCeltView" android:layout_height="wrap_content" android:layout_width="@dimen/mould_gunfight_width" android:padding="@dimen/catabolic_queueing_padding" android:text="@string/reinforce_ventricle_saccade" android:textColor="#CD080A60" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/settingView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
